# test_gitloc

./: README.md  app.py  gitloc.yaml  pyproject.toml
static/locales/de/: welcome.json
static/locales/en/: welcome.json
static/locales/ru/: welcome.json
templates/: hello.html
