[tool.poetry]
name = "test-gitloc"
version = "0.1.0"
description = ""
authors = ["deniko1985 <deniko1985@lenovo>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
flask = "^3.0.0"
python-i18n = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
